fix: user z-index to be above the marker

--- a/app/globals.css
+++ b/app/globals.css
@@ -896,7 +896,7 @@ a.maplibregl-ctrl-logo.maplibregl-compact {
   border-radius: 50%;
   height: 15px;
   width: 15px;
-  z-index: 999;
+  z-index: 40;
 }
 
 .maplibregl-user-location-dot:before {
